# ZisaCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  add__const__if_8hpp.html  add__const__if_8hpp.js  add__const__if_8hpp_source.html  all__integral_8hpp.html  all__integral_8hpp.js  all__integral_8hpp_source.html  all__true_8hpp.html  all__true_8hpp.js  all__true_8hpp_source.html  annotated.html  annotated_dup.js  basic__functions_8cpp.html  basic__functions_8cpp.js  basic__functions_8hpp.html  basic__functions_8hpp.js  basic__functions_8hpp_source.html  building_8md.html  check__cuda__error_8cpp.html  check__cuda__error_8cpp.js  check__cuda__error_8hpp.html  check__cuda__error_8hpp.js  check__cuda__error_8hpp_source.html  classes.html  classzisa_1_1DurationParser-members.html  classzisa_1_1DurationParser.html  classzisa_1_1Timer-members.html  classzisa_1_1Timer.html  classzisa_1_1Timer.js  classzisa_1_1detail_1_1IntegerCast.html  classzisa_1_1detail_1_1IntegerCast_3_01Int_00_01Int_01_4-members.html  classzisa_1_1detail_1_1IntegerCast_3_01Int_00_01Int_01_4.html  classzisa_1_1detail_1_1IntegerCast_3_01int_00_01size__t_01_4-members.html  classzisa_1_1detail_1_1IntegerCast_3_01int_00_01size__t_01_4.html  classzisa_1_1detail_1_1IntegerCast_3_01long_00_01unsigned_01long_01_4-members.html  classzisa_1_1detail_1_1IntegerCast_3_01long_00_01unsigned_01long_01_4.html  classzisa_1_1detail_1_1IntegerCast_3_01size__t_00_01int_01_4-members.html  (+192 more)
.github/workflows/: basic_integrity_checks.yml  publish_docs.yml
cmake/: ZisaCoreConfig.cmake.in  warning_flags.cmake
docs/: Doxyfile  cmake.md  dependencies.md  frontpage.md  mainpage.md
include/zisa/: config.hpp  datetime.hpp
include/zisa/cuda/: check_cuda_error.hpp  cuda.hpp
include/zisa/io/: concatenate.hpp  file_manipulation.hpp  format_as_list.hpp  to_string.hpp
include/zisa/math/: basic_functions.hpp  comparison.hpp  isreal.hpp  mathematical_constants.hpp
include/zisa/meta/: add_const_if.hpp  all_integral.hpp  all_true.hpp  if_t.hpp  return_t.hpp  void_t.hpp
include/zisa/testing/: testing_framework.hpp
include/zisa/utils/: has_key.hpp  human_readable_size.hpp  indent_block.hpp  integer_cast.hpp  join.hpp  logging.hpp  parse_duration.hpp  replace_all.hpp  string_format.hpp  timer.hpp  to_string.hpp  type_name.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  (+45 more)
src/: CMakeLists.txt
src/zisa/: CMakeLists.txt  datetime.cpp
src/zisa/cuda/: CMakeLists.txt  check_cuda_error.cpp
src/zisa/io/: CMakeLists.txt  file_manipulation.cpp
src/zisa/math/: CMakeLists.txt  basic_functions.cpp
src/zisa/utils/: CMakeLists.txt  human_readable_size.cpp  indent_block.cpp  join.cpp  logging.cpp  parse_duration.cpp  replace_all.cpp
test/: CMakeLists.txt  unit_tests.cpp
test/zisa/unit_test/: CMakeLists.txt
test/zisa/unit_test/io/: CMakeLists.txt  file_manipulation.cpp
test/zisa/unit_test/math/: CMakeLists.txt  basic_functions.cpp
test/zisa/unit_test/utils/: CMakeLists.txt  integer_cast.cpp
